--- a/.env
+++ b/.env
@@ -3,4 +3,6 @@
 # example:
 # PORT=8080
 APP_NAME=fit4brain
-APP_VERSION=v0.1-20210624
+APP_VERSION=v0.1-20210816
+APP_PW_verum=AAA
+APP_PW_control=BBB
