PW geändert AAA zu start, BBB zu los

--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # PORT=8080
 APP_NAME=fit4brain
 APP_VERSION=v0.1-20210816
-APP_PW_verum=AAA
-APP_PW_control=BBB
+APP_PW_verum=start
+APP_PW_control=los
